--- a/styles/main.css
+++ b/styles/main.css
@@ -1,14 +1,539 @@
-h1 {
-  font-family: "Roboto", sans-serif;
+a {
+  color: #253757;
+  text-decoration: none; }
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: normal;
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  font-size: 1em; }
+
+html {
+  font-family: Poppins, sans-serif;
+  font-size: 16px; }
+
+.body {
+  margin: 0;
+  color: #253757;
+  background: #f2f9ff; }
+
+.container {
+  margin: 0 auto;
+  padding: 0 100px;
+  max-width: 1200px; }
+
+.big__container {
+  max-width: 1600px; }
+
+.preview {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 680px;
+  color: #fff; }
+  .preview__text {
+    max-width: 362px; }
+  .preview__title {
+    margin-top: 160px;
+    font-weight: 600;
+    font-size: 4em;
+    letter-spacing: -2px; }
+    .preview__title--under {
+      font-weight: normal;
+      margin: 32px 0 85px;
+      font-size: 1.1em; }
+  .preview__img {
+    height: 100%; }
+    .preview__img-photo {
+      border-radius: 200px 0 0;
+      width: 100%;
+      height: 100%; }
+
+.main > .container:nth-child(1)::before {
+  left: 0;
+  position: absolute;
+  content: "";
+  z-index: -1;
+  width: 100%;
+  height: 680px;
+  background-color: #008aff;
+  border-radius: 0 0 0 200px; }
+
+.slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-transform: translateY(-200%);
+          transform: translateY(-200%); }
+  .slider__btn {
+    background: none;
+    border: none; }
+  .slider__description {
+    margin-top: 8px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 0.88em; }
+
+.buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 25px 0 60px; }
+
+.header {
+  background-color: #008aff; }
+
+.head {
+  height: 120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .head .nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+    .head .nav__item {
+      padding: 5px 10px;
+      margin-right: 45px; }
+  .head__link {
+    position: relative; }
+    .head__link::after {
+      position: absolute;
+      content: "";
+      top: 120%;
+      left: 0;
+      width: 100%;
+      height: 3px;
+      border-radius: 4px;
+      background-color: #ff9c8e; }
+
+.intro {
+  letter-spacing: 3px;
+  color: #fff;
+  font-size: 0.81em;
+  font-weight: 600;
+  text-transform: uppercase;
+  -webkit-transition: color 0.3s ease;
+  transition: color 0.3s ease; }
+
+.intro:hover {
+  color: #ff9c8e; }
+
+.btn {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: #fff;
+  padding: 15px 70px;
+  background-color: #ff9c8e;
+  border-radius: 64px;
+  -webkit-transition: background-color 0.3s;
+  transition: background-color 0.3s;
+  border: 3px solid #ff9c8e; }
+  .btn:hover {
+    background-color: #008aff; }
+
+.block__title {
+  font-weight: 600;
+  font-size: 2em;
+  margin-bottom: 16px; }
+
+.about_1 .block {
+  max-width: 750px;
+  margin: 150px auto; }
+  .about_1 .block__text {
+    font-weight: normal;
+    font-size: 1.5em; }
+
+.about_2 {
+  background-color: #fff; }
+
+.expertise {
+  padding: 8vw 0 9.68vw;
+  text-align: center; }
+  .expertise__title {
+    padding-bottom: 64px;
+    font-weight: 600;
+    font-size: 3.25em; }
+  .expertise__cards {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+    .expertise__cards .item {
+      max-width: 270px; }
+      .expertise__cards .item__photo {
+        width: 166px;
+        height: 166px;
+        border-radius: 30px; }
+      .expertise__cards .item__topic {
+        font-size: 1.25em;
+        font-weight: 600;
+        margin: 40px 0 16px; }
+
+.item__text {
+  font-size: 0.88em;
   font-weight: 400; }
 
-@font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal; }
+.logo-for-media {
+  display: none; }
 
-body {
-  background: #eee; }
+.burger {
+  display: none;
+  position: relative;
+  width: 24px;
+  height: 16px;
+  cursor: pointer;
+  z-index: 3; }
+  .burger__line {
+    height: 2px;
+    background-color: #fff;
+    -webkit-transition: -webkit-transform 0.3s;
+    transition: -webkit-transform 0.3s;
+    transition: transform 0.3s;
+    transition: transform 0.3s, -webkit-transform 0.3s; }
+
+.menu {
+  display: none; }
+  .menu__list {
+    position: absolute;
+    width: 300px;
+    padding: 30px 0;
+    right: -380%;
+    border-top: none;
+    background: #008aff;
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+    -webkit-transform-origin: 0 0;
+            transform-origin: 0 0;
+    -webkit-transform: translate(100%, 0);
+            transform: translate(100%, 0);
+    -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+    transition: -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+    text-align: center; }
+    .menu__list a {
+      padding: 10px 0; }
+  .menu__toggle {
+    display: block;
+    position: absolute;
+    top: 50px;
+    z-index: 1;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+     -ms-user-select: none;
+         user-select: none; }
+    .menu__toggle span {
+      display: block;
+      width: 33px;
+      height: 4px;
+      margin-bottom: 5px;
+      position: relative;
+      background: #ff9c8e;
+      border-radius: 3px;
+      z-index: 1;
+      -webkit-transform-origin: 4px 0;
+              transform-origin: 4px 0;
+      -webkit-transition: background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease, -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+      transition: background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease, -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+      transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+      transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease, -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1); }
+      .menu__toggle span:first-child {
+        -webkit-transform-origin: 0 0;
+                transform-origin: 0 0; }
+      .menu__toggle span:nth-last-child(2) {
+        -webkit-transform-origin: 0 100%;
+                transform-origin: 0 100%; }
+    .menu__toggle input {
+      display: block;
+      width: 40px;
+      height: 32px;
+      position: absolute;
+      top: -7px;
+      left: -5px;
+      cursor: pointer;
+      opacity: 0;
+      z-index: 2;
+      -webkit-touch-callout: none; }
+      .menu__toggle input:checked ~ span {
+        opacity: 1;
+        -webkit-transform: rotate(45deg) translate(-2px, -1px);
+                transform: rotate(45deg) translate(-2px, -1px);
+        background: #fff; }
+        .menu__toggle input:checked ~ span:nth-last-child(3) {
+          opacity: 0;
+          -webkit-transform: rotate(0deg) scale(0.2, 0.2);
+                  transform: rotate(0deg) scale(0.2, 0.2); }
+        .menu__toggle input:checked ~ span:nth-last-child(2) {
+          opacity: 1;
+          -webkit-transform: rotate(-45deg) translate(0, -1px);
+                  transform: rotate(-45deg) translate(0, -1px); }
+      .menu__toggle input:checked ~ ul {
+        -webkit-transform: none;
+                transform: none;
+        opacity: 1; }
+
+.block_part {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 150px; }
+
+.title {
+  max-width: 360px; }
+  .title__text {
+    margin: 16px 0 24px; }
+  .title__up {
+    letter-spacing: 3px;
+    font-size: 0.81em;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: #c0cdd7; }
+
+.cards {
+  max-width: 588px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+  .cards__item {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    padding: 32px;
+    background-color: #fff;
+    -webkit-box-shadow: 0 9px 18px rgba(37, 41, 49, 0.03);
+            box-shadow: 0 9px 18px rgba(37, 41, 49, 0.03);
+    border-radius: 24px;
+    width: 264px;
+    height: 264px;
+    margin: 15px; }
+  .cards__item:nth-child(odd) {
+    -webkit-transform: translateY(130px);
+            transform: translateY(130px); }
+  .cards__text {
+    margin: 24px 0 32px;
+    font-family: "Open Sans", sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 0.81em; }
+  .cards__link--text {
+    font-weight: 600;
+    font-size: 0.94em;
+    margin-left: 16px; }
+  .cards__arrow {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+    .cards__arrow .arrow {
+      margin: auto; }
+    .cards__arrow--red {
+      background-color: #f36363; }
+    .cards__arrow--green {
+      background-color: #15d850; }
+    .cards__arrow--blue {
+      background-color: #56ccf2; }
+    .cards__arrow--yellow {
+      background-color: #fcc91d; }
+  .cards__number {
+    display: inline;
+    border-radius: 23px;
+    padding: 2px 12px;
+    letter-spacing: 0; }
+    .cards__number--red {
+      color: #f36363;
+      background-color: rgba(243, 99, 99, 0.1); }
+    .cards__number--green {
+      color: #15d850;
+      background-color: rgba(21, 216, 80, 0.1); }
+    .cards__number--blue {
+      color: #56ccf2;
+      background-color: rgba(86, 204, 242, 0.1); }
+    .cards__number--yellow {
+      color: #fcc91d;
+      background-color: rgba(252, 201, 29, 0.1); }
+  .cards__link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+
+@media (max-width: 768px) {
+  .menu {
+    display: block; }
+  .menu_for_desktop {
+    display: none; }
+  .menu__list {
+    -webkit-transform: none;
+            transform: none;
+    opacity: 0;
+    -webkit-transition: opacity 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+    transition: opacity 0.5s cubic-bezier(0.77, 0.2, 0.05, 1); }
+  .preview__text {
+    position: static;
+    display: grid;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    max-width: 100%; }
+  .preview__title {
+    margin-top: 30px; }
+    .preview__title--under {
+      font-weight: normal;
+      margin-bottom: 30px; }
+  .preview__img-photo {
+    border-radius: 0 0 100px 100px; }
+  .slider__text {
+    top: 50%;
+    text-align: center;
+    left: auto; }
+  .buttons {
+    top: 60%;
+    left: auto; } }
+
+.about_3 .block__title {
+  color: #fff; }
+
+.features {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  color: #fff;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  background-color: #ff9c8e;
+  border-radius: 200px 0 0 200px;
+  margin-left: 120px; }
+  .features__text {
+    max-width: 370px;
+    margin: 205px 50px 205px 205px; }
+  .features__photo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    max-width: 680px; }
+    .features__photo--img {
+      border-radius: 200px 0 0;
+      width: 100%;
+      height: 680px; }
+  .features__up {
+    color: #fff; }
+  .features__title {
+    font-weight: 600;
+    font-size: 2em;
+    margin-bottom: 32px; }
+
+.icons__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 64px; }
+  .icons__item:last-child {
+    margin-bottom: 0; }
+
+.icons__text {
+  font-size: 0.94rem;
+  margin-left: 34px; }
+
+.team {
+  margin: 150px 0 170px; }
+
+.cards--human {
+  margin-top: 85px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+  .cards--human__item {
+    height: 500px;
+    width: 315px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    background-color: #fff;
+    text-align: center;
+    border-radius: 24px;
+    -webkit-box-shadow: 0 9px 18px rgba(37, 41, 49, 0.03);
+            box-shadow: 0 9px 18px rgba(37, 41, 49, 0.03); }
+    .cards--human__item:nth-child(2) {
+      margin: 0 100px; }
+  .cards--human__photo {
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    margin: 87px 87px 82px;
+    -o-object-fit: cover;
+       object-fit: cover; }
+    .cards--human__photo:before, .cards--human__photo:after {
+      width: 55px;
+      height: 140px;
+      content: "";
+      -webkit-transform: rotate(60deg);
+              transform: rotate(60deg);
+      border-radius: 500px;
+      background-color: #008aff; }
+  .cards--human__text {
+    margin: 10px 32px 16px; }
+  .cards--human__prof {
+    margin: 4px 0 32px; }
+  .cards--human__name {
+    color: #253757;
+    margin: 0; }
 
 /*# sourceMappingURL=main.css.map */
