--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,26 @@ h6 {
   padding: 0;
   font-size: 1em; }
 
+@-webkit-keyframes lineUnderLink {
+  from {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    width: 0; }
+  to {
+    width: 100%;
+    -webkit-transform: translateX(100);
+            transform: translateX(100); } }
+
+@keyframes lineUnderLink {
+  from {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    width: 0; }
+  to {
+    width: 100%;
+    -webkit-transform: translateX(100);
+            transform: translateX(100); } }
+
 html {
   font-family: Poppins, sans-serif;
   font-size: 16px; }
@@ -34,6 +54,7 @@ html {
   max-width: 1200px; }
 
 .big__container {
+  margin: 0 auto;
   max-width: 1600px; }
 
 .preview {
@@ -57,11 +78,19 @@ html {
       margin: 32px 0 85px;
       font-size: 1.1em; }
   .preview__img {
-    height: 100%; }
+    height: 100%;
+    overflow: hidden; }
     .preview__img-photo {
       border-radius: 200px 0 0;
       width: 100%;
-      height: 100%; }
+      height: 100%;
+      -webkit-transition: -webkit-transform 0.3s;
+      transition: -webkit-transform 0.3s;
+      transition: transform 0.3s;
+      transition: transform 0.3s, -webkit-transform 0.3s; }
+      .preview__img-photo:hover {
+        -webkit-transform: scale(1.1);
+                transform: scale(1.1); }
 
 .main > .container:nth-child(1)::before {
   left: 0;
@@ -81,7 +110,16 @@ html {
           transform: translateY(-200%); }
   .slider__btn {
     background: none;
-    border: none; }
+    border: none;
+    cursor: pointer;
+    -webkit-transition: -webkit-transform 0.3s;
+    transition: -webkit-transform 0.3s;
+    transition: transform 0.3s;
+    transition: transform 0.3s, -webkit-transform 0.3s;
+    outline: none; }
+    .slider__btn:hover {
+      -webkit-transform: scale(1.2);
+              transform: scale(1.2); }
   .slider__description {
     margin-top: 8px;
     font-style: normal;
@@ -132,25 +170,37 @@ html {
   color: #fff;
   font-size: 0.81em;
   font-weight: 600;
-  text-transform: uppercase;
-  -webkit-transition: color 0.3s ease;
-  transition: color 0.3s ease; }
+  text-transform: uppercase; }
 
-.intro:hover {
-  color: #ff9c8e; }
+.link {
+  position: relative;
+  -webkit-transition: color 0.2s;
+  transition: color 0.2s; }
+  .link:hover:after {
+    content: "";
+    width: 0;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    height: 2px;
+    background-color: #ff9c8e;
+    border-radius: 8px;
+    -webkit-animation: lineUnderLink 0.2s linear both;
+            animation: lineUnderLink 0.2s linear both; }
 
 .btn {
+  color: #fff;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  color: #fff;
   padding: 15px 70px;
   background-color: #ff9c8e;
   border-radius: 64px;
-  -webkit-transition: background-color 0.3s;
-  transition: background-color 0.3s;
+  -webkit-transition: background-color 0.3s, color 0.3s;
+  transition: background-color 0.3s, color 0.3s;
   border: 3px solid #ff9c8e; }
   .btn:hover {
-    background-color: #008aff; }
+    color: #008aff;
+    background-color: #fff; }
 
 .block__title {
   font-weight: 600;
@@ -160,11 +210,13 @@ html {
 .about_1 .block {
   max-width: 750px;
   margin: 150px auto; }
-  .about_1 .block__text {
-    font-weight: normal;
-    font-size: 1.5em; }
 
-.about_2 {
+.block__text {
+  font-weight: normal;
+  font-size: 1.5em;
+  font-style: normal; }
+
+.our_expertise {
   background-color: #fff; }
 
 .expertise {
@@ -188,7 +240,16 @@ html {
       .expertise__cards .item__photo {
         width: 166px;
         height: 166px;
-        border-radius: 30px; }
+        border-radius: 30px;
+        -o-object-fit: cover;
+           object-fit: cover;
+        -webkit-transition: -webkit-transform 0.3s;
+        transition: -webkit-transform 0.3s;
+        transition: transform 0.3s;
+        transition: transform 0.3s, -webkit-transform 0.3s; }
+        .expertise__cards .item__photo:hover {
+          -webkit-transform: scale(1.3);
+                  transform: scale(1.3); }
       .expertise__cards .item__topic {
         font-size: 1.25em;
         font-weight: 600;
@@ -197,9 +258,6 @@ html {
 .item__text {
   font-size: 0.88em;
   font-weight: 400; }
-
-.logo-for-media {
-  display: none; }
 
 .burger {
   display: none;
@@ -217,6 +275,7 @@ html {
     transition: transform 0.3s, -webkit-transform 0.3s; }
 
 .menu {
+  font-size: 1.2rem;
   display: none; }
   .menu__list {
     position: absolute;
@@ -237,7 +296,9 @@ html {
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
     text-align: center; }
     .menu__list a {
-      padding: 10px 0; }
+      padding: 20px; }
+    .menu__list li {
+      margin: 20px 0; }
   .menu__toggle {
     display: block;
     position: absolute;
@@ -332,12 +393,17 @@ html {
             box-sizing: border-box;
     padding: 32px;
     background-color: #fff;
-    -webkit-box-shadow: 0 9px 18px rgba(37, 41, 49, 0.03);
-            box-shadow: 0 9px 18px rgba(37, 41, 49, 0.03);
     border-radius: 24px;
-    width: 264px;
-    height: 264px;
-    margin: 15px; }
+    max-width: 264px;
+    max-height: 264px;
+    margin: 15px;
+    -webkit-transition: -webkit-box-shadow 0.3s;
+    transition: -webkit-box-shadow 0.3s;
+    transition: box-shadow 0.3s;
+    transition: box-shadow 0.3s, -webkit-box-shadow 0.3s; }
+    .cards__item:hover {
+      -webkit-box-shadow: 20px 18px 20px rgba(86, 204, 242, 0.3);
+              box-shadow: 20px 18px 20px rgba(86, 204, 242, 0.3); }
   .cards__item:nth-child(odd) {
     -webkit-transform: translateY(130px);
             transform: translateY(130px); }
@@ -357,17 +423,40 @@ html {
     border-radius: 50%;
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex; }
+    display: flex;
+    -webkit-transition: -webkit-transform 0.3s;
+    transition: -webkit-transform 0.3s;
+    transition: transform 0.3s;
+    transition: transform 0.3s, -webkit-transform 0.3s; }
+    .cards__arrow:hover {
+      -webkit-transform: scale(1.2);
+              transform: scale(1.2); }
     .cards__arrow .arrow {
       margin: auto; }
     .cards__arrow--red {
       background-color: #f36363; }
+      .cards__arrow--red + .link:hover {
+        color: #f36363; }
+        .cards__arrow--red + .link:hover:after {
+          background-color: #f36363; }
     .cards__arrow--green {
       background-color: #15d850; }
+      .cards__arrow--green + .link:hover {
+        color: #15d850; }
+        .cards__arrow--green + .link:hover:after {
+          background-color: #15d850; }
     .cards__arrow--blue {
       background-color: #56ccf2; }
+      .cards__arrow--blue + .link:hover {
+        color: #56ccf2; }
+        .cards__arrow--blue + .link:hover:after {
+          background-color: #56ccf2; }
     .cards__arrow--yellow {
       background-color: #fcc91d; }
+      .cards__arrow--yellow + .link:hover {
+        color: #fcc91d; }
+        .cards__arrow--yellow + .link:hover:after {
+          background-color: #fcc91d; }
   .cards__number {
     display: inline;
     border-radius: 23px;
@@ -393,7 +482,254 @@ html {
         -ms-flex-align: center;
             align-items: center; }
 
-@media (max-width: 768px) {
+.about_3 .block__title {
+  color: #fff; }
+
+.features {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  color: #fff;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  background-color: #ff9c8e;
+  border-radius: 200px 0 0 200px;
+  margin-left: 120px; }
+  .features__text {
+    max-width: 370px;
+    margin: 205px 50px 205px 205px; }
+  .features__photo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    max-width: 680px; }
+    .features__photo--img {
+      -o-object-fit: cover;
+         object-fit: cover;
+      border-radius: 200px 0 0;
+      width: 100%;
+      height: 680px; }
+  .features__up {
+    color: #fff; }
+  .features__title {
+    font-weight: 600;
+    font-size: 2em;
+    margin-bottom: 32px; }
+
+.icons__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 64px; }
+  .icons__item:last-child {
+    margin-bottom: 0; }
+
+.icons__img {
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s; }
+  .icons__img:hover {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); }
+
+.icons__text {
+  font-size: 0.94rem;
+  margin-left: 34px; }
+
+.team {
+  margin: 150px 0 170px; }
+
+.cards--human {
+  margin-top: 85px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+  .cards--human__item {
+    max-height: 500px;
+    max-width: 315px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    background-color: #fff;
+    text-align: center;
+    border-radius: 24px;
+    -webkit-box-shadow: 0 9px 18px rgba(37, 41, 49, 0.03);
+            box-shadow: 0 9px 18px rgba(37, 41, 49, 0.03);
+    margin: 0 10px 30px 0;
+    -webkit-transition: -webkit-box-shadow 0.4s;
+    transition: -webkit-box-shadow 0.4s;
+    transition: box-shadow 0.4s;
+    transition: box-shadow 0.4s, -webkit-box-shadow 0.4s; }
+    .cards--human__item:last-child {
+      margin: 0; }
+    .cards--human__item:hover {
+      -webkit-box-shadow: 0 0 0 3px #ff9c8e;
+              box-shadow: 0 0 0 3px #ff9c8e; }
+      .cards--human__item:hover .cards--human__photo:before {
+        -webkit-transform: translate(-20%, 30%);
+                transform: translate(-20%, 30%); }
+      .cards--human__item:hover .cards--human__photo:after {
+        -webkit-transform: translate(20%, -35%);
+                transform: translate(20%, -35%); }
+  .cards--human__photo {
+    margin: 87px 87px 82px;
+    position: relative; }
+    .cards--human__photo::before, .cards--human__photo::after {
+      -webkit-transition: -webkit-transform 0.3s;
+      transition: -webkit-transform 0.3s;
+      transition: transform 0.3s;
+      transition: transform 0.3s, -webkit-transform 0.3s;
+      z-index: 0;
+      position: absolute;
+      width: 55px;
+      height: 140px;
+      content: "";
+      -webkit-transform: rotate(30deg);
+              transform: rotate(30deg);
+      border-radius: 500px; }
+    .cards--human__photo--red::before, .cards--human__photo--red::after {
+      background-color: #f36363; }
+    .cards--human__photo--yellow::before, .cards--human__photo--yellow::after {
+      background-color: #fcc91d; }
+    .cards--human__photo--blue::before, .cards--human__photo--blue::after {
+      background-color: #56ccf2; }
+    .cards--human__photo::before {
+      top: -30%;
+      left: -10%; }
+    .cards--human__photo::after {
+      bottom: -30%;
+      right: -10%; }
+  .cards--human__photo-img {
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    z-index: 1;
+    position: relative; }
+  .cards--human .suffix {
+    margin: 0 auto; }
+    .cards--human .suffix--blue path {
+      fill: #f36363; }
+    .cards--human .suffix--yellow path {
+      fill: #fcc91d; }
+    .cards--human .suffix--red path {
+      fill: #56ccf2; }
+  .cards--human__text {
+    margin: 10px 32px 16px; }
+  .cards--human__prof {
+    margin: 4px 0 32px; }
+  .cards--human__name {
+    color: #253757;
+    margin: 0; }
+
+.result {
+  background-image: url("./../images/Shapes.svg");
+  background-size: cover;
+  background-repeat: repeat-x;
+  background-color: #fff;
+  padding: 200px 50px;
+  text-align: center; }
+  .result__title {
+    font-weight: 600;
+    font-size: 52px; }
+    .result__title--down {
+      margin: 24px 0 64px; }
+  .result:hover {
+    background-size: contain; }
+
+.footer {
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 180px 0 120px; }
+  .footer__form {
+    margin-right: 30px; }
+  .footer__bg {
+    background-color: #008aff; }
+  .footer__title {
+    margin-bottom: 56px;
+    font-weight: 600;
+    font-size: 2rem; }
+
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
+  .form__item {
+    margin-bottom: 50px;
+    background: none;
+    border: none;
+    font-weight: 600;
+    font-size: 0.94rem;
+    padding-bottom: 12px;
+    border-bottom: 1px solid #fff;
+    opacity: 0.5; }
+    .form__item:last-child {
+      margin-bottom: 80px; }
+    .form__item:hover {
+      opacity: 1; }
+    .form__item::-webkit-input-placeholder {
+      color: #fff; }
+    .form__item::-moz-placeholder {
+      color: #fff; }
+    .form__item:-ms-input-placeholder {
+      color: #fff; }
+    .form__item::-ms-input-placeholder {
+      color: #fff; }
+    .form__item::placeholder {
+      color: #fff; }
+
+.contact__cont {
+  display: block;
+  margin: 8px 0 48px;
+  color: #fff; }
+
+.contact__soc {
+  margin-top: 16px; }
+  .contact__soc--icon {
+    opacity: 0.5;
+    margin-right: 32px; }
+    .contact__soc--icon:hover {
+      opacity: 1; }
+
+::-webkit-scrollbar {
+  width: 5px;
+  background-color: #008aff; }
+
+::-webkit-scrollbar-thumb {
+  border-radius: 20%;
+  background-color: #ff9c8e; }
+
+@media (max-width: 769px) {
   .menu {
     display: block; }
   .menu_for_desktop {
@@ -429,111 +765,38 @@ html {
     left: auto; }
   .buttons {
     top: 60%;
-    left: auto; } }
-
-.about_3 .block__title {
-  color: #fff; }
-
-.features {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  color: #fff;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  background-color: #ff9c8e;
-  border-radius: 200px 0 0 200px;
-  margin-left: 120px; }
-  .features__text {
-    max-width: 370px;
-    margin: 205px 50px 205px 205px; }
-  .features__photo {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
-    max-width: 680px; }
-    .features__photo--img {
-      border-radius: 200px 0 0;
-      width: 100%;
-      height: 680px; }
-  .features__up {
-    color: #fff; }
-  .features__title {
-    font-weight: 600;
-    font-size: 2em;
-    margin-bottom: 32px; }
-
-.icons__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 64px; }
-  .icons__item:last-child {
-    margin-bottom: 0; }
-
-.icons__text {
-  font-size: 0.94rem;
-  margin-left: 34px; }
-
-.team {
-  margin: 150px 0 170px; }
-
-.cards--human {
-  margin-top: 85px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between; }
-  .cards--human__item {
-    height: 500px;
-    width: 315px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    left: auto; }
+  .expertise__cards {
+    -ms-flex-pack: distribute;
+        justify-content: space-around; }
+  .item:last-child {
+    margin-top: 50px; }
+  .block_part {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    background-color: #fff;
-    text-align: center;
-    border-radius: 24px;
-    -webkit-box-shadow: 0 9px 18px rgba(37, 41, 49, 0.03);
-            box-shadow: 0 9px 18px rgba(37, 41, 49, 0.03); }
-    .cards--human__item:nth-child(2) {
-      margin: 0 100px; }
-  .cards--human__photo {
-    width: 140px;
-    height: 140px;
-    border-radius: 50%;
-    margin: 87px 87px 82px;
-    -o-object-fit: cover;
-       object-fit: cover; }
-    .cards--human__photo:before, .cards--human__photo:after {
-      width: 55px;
-      height: 140px;
-      content: "";
-      -webkit-transform: rotate(60deg);
-              transform: rotate(60deg);
-      border-radius: 500px;
-      background-color: #008aff; }
-  .cards--human__text {
-    margin: 10px 32px 16px; }
-  .cards--human__prof {
-    margin: 4px 0 32px; }
-  .cards--human__name {
-    color: #253757;
-    margin: 0; }
+            flex-direction: column; }
+  .cards__item:nth-child(odd) {
+    -webkit-transform: none;
+            transform: none; }
+  .container {
+    padding: 0 50px; }
+  .cards--human {
+    -ms-flex-pack: distribute;
+        justify-content: space-around; }
+    .cards--human__photo {
+      margin: 47px 47px 42px; }
+      .cards--human__photo::before {
+        top: -25%;
+        left: 5%; }
+      .cards--human__photo::after {
+        bottom: -33%;
+        right: 7%; }
+  .footer {
+    padding: 100px 50px 50px; }
+  .preview {
+    display: grid;
+    grid-template-rows: 1fr 3fr;
+    row-gap: 50px; } }
 
 /*# sourceMappingURL=main.css.map */
